# coursera

./: gituse.md  readme.md
chapter3/: classTest  classTest.cpp  closeClass  closeClass.cpp  copyConstructor  copyConstructor.cpp
chapter3/newWarriors/src/: newwarriors  newwarriors.cpp  newwarriors.cpp~  warriors  warriors.cpp
chapter3/warriors/: CMakeLists.txt  runwarrior.sh
chapter3/warriors/src/: CMakeLists.txt  warriorProduct  warriorProduct.cpp
chapter4/complex/: CMakeLists.txt  operator_reload  operator_reload.cpp  opt_reload  opt_reloadConfig.h.in
chapter4/compute/: computer.cpp
chapter4/myInt/: myint  myint.cpp
chapter5/: MyString.cpp
chapter5/programming1/: myString  myString.cpp  stringTest.cpp
src/: main.cpp
